@@ -1,24 +1,10 @@
 {
-  "timestamp" : "2022-05-17T16:29:30Z",
-  "count_outdated" : 172,
-  "uniques_outdated" : 115,
-  "count" : 256,
-  "uniques" : 152,
+  "timestamp" : "2022-05-18T01:19:06Z",
+  "count_outdated" : 187,
+  "uniques_outdated" : 121,
+  "count" : 262,
+  "uniques" : 153,
   "clones" : [
-    {
-      "timestamp": "2022-05-03T00:00:00Z",
-      "count": 10,
-      "count_minmax": [ 10, 13 ],
-      "uniques": 5,
-      "uniques_minmax": [ 5, 5 ]
-    },
-    {
-      "timestamp": "2022-05-04T00:00:00Z",
-      "count": 2,
-      "count_minmax": [ 0, 2 ],
-      "uniques": 1,
-      "uniques_minmax": [ 0, 1 ]
-    },
     {
       "timestamp": "2022-05-05T00:00:00Z",
       "count": 6,
@@ -29,23 +15,23 @@
     {
       "timestamp": "2022-05-06T00:00:00Z",
       "count": 9,
-      "count_minmax": [ 0, 9 ],
+      "count_minmax": [ 9, 9 ],
       "uniques": 6,
-      "uniques_minmax": [ 0, 6 ]
+      "uniques_minmax": [ 6, 6 ]
     },
     {
       "timestamp": "2022-05-07T00:00:00Z",
       "count": 24,
-      "count_minmax": [ 0, 24 ],
+      "count_minmax": [ 24, 24 ],
       "uniques": 8,
-      "uniques_minmax": [ 0, 8 ]
+      "uniques_minmax": [ 8, 8 ]
     },
     {
       "timestamp": "2022-05-08T00:00:00Z",
       "count": 9,
-      "count_minmax": [ 0, 9 ],
+      "count_minmax": [ 9, 9 ],
       "uniques": 5,
-      "uniques_minmax": [ 0, 5 ]
+      "uniques_minmax": [ 5, 5 ]
     },
     {
       "timestamp": "2022-05-11T00:00:00Z",
@@ -57,16 +43,16 @@
     {
       "timestamp": "2022-05-12T00:00:00Z",
       "count": 4,
-      "count_minmax": [ 0, 4 ],
+      "count_minmax": [ 4, 4 ],
       "uniques": 2,
-      "uniques_minmax": [ 0, 2 ]
+      "uniques_minmax": [ 2, 2 ]
     },
     {
       "timestamp": "2022-05-17T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ]
+      "count": 4,
+      "count_minmax": [ 1, 4 ],
+      "uniques": 2,
+      "uniques_minmax": [ 1, 2 ]
     }
   ]
 }
