@@ -1,17 +1,7 @@
 {
-  "count": 84,
-  "uniques": 16,
+  "count": 75,
+  "uniques": 15,
   "clones": [
-    {
-      "timestamp": "2022-05-03T00:00:00Z",
-      "count": 10,
-      "uniques": 5
-    },
-    {
-      "timestamp": "2022-05-04T00:00:00Z",
-      "count": 2,
-      "uniques": 1
-    },
     {
       "timestamp": "2022-05-05T00:00:00Z",
       "count": 6,
@@ -44,8 +34,8 @@
     },
     {
       "timestamp": "2022-05-17T00:00:00Z",
-      "count": 1,
-      "uniques": 1
+      "count": 4,
+      "uniques": 2
     }
   ]
 }
