@@ -1,3 +1,10 @@
+2022-05-18T01:19:06Z:
+* notice: last 14d: all unq: 75 15
+* notice: prev accum: outdated-all outdated-unq / all unq: 172 115 / 256 152
+* notice: next accum: outdated-all outdated-unq / all unq: 187 121 / 262 153
+* notice: prev exec diff / last date diff / accum: unq all: +1 +3 -0 -0 / +2 +4 -0 -0 / 2 4
+* notice: changed dates: [2022-05-17]
+
 2022-05-17T16:29:30Z:
 * notice: last 14d: all unq: 84 16
 * notice: prev accum: outdated-all outdated-unq / all unq: 172 115 / 258 151
